--- a/pages/catering-main-page.html
+++ b/pages/catering-main-page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="/pages/main-page.css">
+  <link rel="stylesheet" href="/pages/catering-main-page.css">
   <script src="/pages/main-page.js" defer></script> 
 
 
@@ -95,6 +95,9 @@
 <div class="filterContainer">
 
    <button class="filterButton" onclick="filterCategory('all')">All Categories</button>
+   <button class="filterButton" onclick="filterCategory('celebrations')">Celebrations</button>
+   <button class="filterButton" onclick="filterCategory('corporate')">Corporate</button>
+   <button class="filterButton" onclick="filterCategory('events')">Events</button>
    <button class="filterButton" onclick="filterCategory('breakfast')">Breakfast</button>
    <button class="filterButton" onclick="filterCategory('lunch')">Lunch</button>
    <button class="filterButton" onclick="filterCategory('mexican')">Mexican</button>
@@ -117,9 +120,10 @@
   <div class="carousel-container">
     <div class="featuredContainer" id="carousel">
 
+      
   
     <div class="featuredRestaurants">
-      <a href="/menu/uplifted-bistro-order-page/uplifted-bistro-menu.html" style="text-decoration: none;">
+      <a href="/menu/uplifted-bistro-order-page/uplifted-bistro-catering-menu.html" style="text-decoration: none;">
       <div class="restaurantCard" data-category="breakfast">
         <img class="restaurantImage" src="/pages/restaurants/uplifted-bistro.png" alt="Restaurant Image">
         <div class="restaurantName">Uplifted Bistro</div>
