--- a/pages/checkout-catering.html
+++ b/pages/checkout-catering.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Checkout Page</title>
 <link rel="stylesheet" type="text/css" href="">
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 <body>
 <div class="container">
@@ -41,6 +45,12 @@
     <select name="timeslot" id="timeslot" class="form-control" required>
         <!-- Time slot options will be added here -->
     </select>
+
+
+    <input type="text" id="datePicker" placeholder="Seleccione una fecha">
+
+    
+
 </div>
 
     <!-- Delivery address -->
@@ -448,6 +458,40 @@ function updateTotalPrice() {
 
 
 </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script>
+flatpickr("#datePicker", {
+    dateFormat: "Y-m-d", // Formato de fecha YYYY-MM-DD
+    minDate: "today", // La fecha mínima es hoy
+    maxDate: new Date().fp_incr(30), // La fecha máxima es hoy + 30 días
+    disable: [
+        function(date) {
+            // Deshabilitar todos los días posteriores al rango permitido
+            return date > new Date().fp_incr(30);
+        }
+    ],
+    // Otras opciones aquí
+});
+</script>
+
+
+<style>
+  
+</style>
 
 </body>
 </html>
